--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A widget that shows the recent block information with expandable rows, optimized for bpanel dashboard",
   "main": "dist/index.js",
   "scripts": {
-    "babel": "babel --presets=env,stage-3 lib -d dist",
-    "watch": "babel --presets=env,stage-3 lib -d dist --watch -s",
+    "babel": "babel --presets=env,stage-3 lib -d dist --copy-files",
+    "watch": "babel --presets=env,stage-3 lib -d dist --copy-files --watch -s",
     "clean": "rm -f ./dist/*.js",
     "lint": "eslint lib/ test/ || exit 0",
     "prepublish": "make babel",
@@ -25,6 +25,7 @@
     "@material-ui/core": "^4.9.0",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "clsx": "^1.1.0",
     "fcoin": "^1.1.3",
     "moment": "^2.24.0",
     "prop-types": "^15.6.0",
